packages/nestjs-trpc/cli/tests/fixtures/invalid/syntax-error/broken.router.ts
// This file has intentional syntax errors
import { Router } from 'nestjs-trpc';

@Router()
export class BrokenRouter {
    // Missing closing brace intentionally
    getUser() {
        return {{{
}
